@@ -1,25 +1,28 @@
 package tasklist;
 
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import ui.TextUi;
 
 import java.time.LocalDateTime;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 /**
  * Represents an entire tasklist and contains methods to edit and display the list.
  */
 public class TaskList {
-    protected LinkedList<Task> taskList;
+
+    protected ArrayList<Task> tasks;
     private TextUi ui;
 
     public TaskList() {
-        taskList = new LinkedList<Task>();
+        tasks = new ArrayList<Task>();
         ui = new TextUi();
     }
 
 
-    public TaskList(LinkedList<Task> loadedList) {
-        taskList = loadedList;
+    public TaskList(ArrayList<Task> loadedList) {
+        tasks = loadedList;
         ui = new TextUi();
     }
 
@@ -27,14 +30,14 @@ public class TaskList {
      * prints the ui after adding a new task.
      */
     public void printNewTask() {
-        ui.printAddedTask(taskList.getLast().getOverallStatus(),taskList.size());
+        ui.printAddedItem(tasks.get(tasks.size()-1).getOverallStatus(), tasks.size());
     }
 
     /**
      * prints the ui for listing tasks.
      */
     public void listTasks() {
-        ui.printTaskList(taskList);
+        ui.printItemList(tasks);
     }
 
     /**
@@ -43,8 +46,8 @@ public class TaskList {
      */
     public void completeTask(String completedtask) {
         int taskNumber = Integer.parseInt(completedtask);
-        taskList.get(taskNumber - 1).completeTask();
-        ui.printCompletedTask(taskList.get(taskNumber - 1).getOverallStatus());
+        tasks.get(taskNumber - 1).completeTask();
+        ui.printCompletedTask(tasks.get(taskNumber - 1).getOverallStatus());
     }
 
     /**
@@ -58,14 +61,16 @@ public class TaskList {
         assert !description.isEmpty() : "description should not be empty";
         switch (taskType) {
         case "todo":
-            taskList.addLast(new Todo(description,completionStatus));
+            tasks.add(new Todo(description,completionStatus,date));
             break;
         case "deadline":
-            taskList.addLast(new Deadline(description, completionStatus, date));
+            tasks.add(new Deadline(description, completionStatus, date));
             break;
         case "event":
-            taskList.addLast(new Event(description, completionStatus, date));
+            tasks.add(new Event(description, completionStatus, date));
             break;
+        case "notebook":
+            tasks.add(new Notebook(description,completionStatus,date));
         default:
             // not necessary as tasktype can only be the above 3
         }
@@ -76,13 +81,18 @@ public class TaskList {
      * @param deletedEvent determines the task to be deleted
      */
     public void removeTask(String deletedEvent) {
-        int taskTodDelete = Integer.parseInt(deletedEvent);
-        ui.printRemovedTask(taskList.get(taskTodDelete - 1).getOverallStatus(),taskList.size());
-        taskList.remove(taskTodDelete - 1);
+        if (deletedEvent.contains("all")){
+            tasks.clear();
+            ui.printRemovedItem("All tasks", tasks.size()+1);
+        }else {
+            int taskTodDelete = Integer.parseInt(deletedEvent);
+            ui.printRemovedItem(tasks.get(taskTodDelete - 1).getOverallStatus(), tasks.size());
+            tasks.remove(taskTodDelete - 1);
+        }
     }
 
-    public LinkedList<Task> getTaskList() {
-        return taskList;
+    public ArrayList<Task> getTasks() {
+        return tasks;
     }
 
     /**
@@ -90,13 +100,18 @@ public class TaskList {
      * @param search the string to search for
      */
     public void findTasks(String search) {
-        LinkedList<String> foundtasks = new LinkedList<>();
-        for (Task task: taskList) {
+        ObservableList<String> foundtasks = FXCollections.observableArrayList();
+        for (Task task: tasks) {
             if (task.getOverallStatus().contains(search)) {
-                foundtasks.addLast(task.getOverallStatus());
+                foundtasks.add(task.getOverallStatus());
             }
         }
         ui.printFoundTasks(foundtasks);
     }
+
+    public void setTasks(ArrayList<Task> tasks) {
+        this.tasks = tasks;
+    }
+
 
 }
